# NexusEngine-2.0

./: Makefile  Nova.h  README.md  earch imgui  fix_joystick.py  fix_negate_remove.py  fix_ui.py  imgui.ini  main.cpp  novaengine
.github/workflows/: build.yml
Engine/Core/: Component.h  Engine.h  GameObject.h  Logger.h  Time.h  Transform.h
Engine/Editor/: Editor.h  EditorCamera.h
Engine/Math/: MathUtils.h  Matrix4.h  Quaternion.h  Vector4.h
Engine/Platform/: Input.h
Engine/Renderer/: Camera.cpp  Light.cpp  Mesh.h  Shader.h
Engine/Scene/: SceneManager.h
Game/: DemoScripts.h
NexusAPK/: AndroidManifest.xml  build.sh  make_manifest.py
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AndroidLogger.h  CMakeLists.txt  main_android.cpp
android/app/src/main/cpp/Engine/Core/: Logger.h  Types.h
android/app/src/main/cpp/Engine/Editor/: EditorUI.h
android/app/src/main/cpp/Engine/Math/: Vector2.h  Vector3.h
android/app/src/main/cpp/Engine/Platform/: EGLWindow.h
android/app/src/main/cpp/Engine/Renderer/: Camera.h  GLRenderer.h  Light.h  Material.h  MeshRenderer.h
android/app/src/main/cpp/Engine/Scene/: Scene.h
android/app/src/main/cpp/Engine/Scripting/: Script.h
android/app/src/main/res/values/: strings.xml
